--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-linear-gradient": "^2.5.6",
